--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -33,31 +33,36 @@
     </ng-container>
   
     <!-- Symbol Column -->
-    <ng-container matColumnDef="S1_S">
-      <th mat-header-cell *matHeaderCellDef class="notas"> S1_S </th>
+    
+    <ng-container matColumnDef="Sexo">
+      <th mat-header-cell *matHeaderCellDef class="notas"> Sexo </th>
+      <td mat-cell *matCellDef="let element"> 
+        <span *ngIf="element.sexo === 'M'"><mat-icon style="color: #7a6abb;">male</mat-icon></span> 
+        <span *ngIf="element.sexo === 'F'"><mat-icon style="color: #ca6291;">female</mat-icon></span> 
+      </td>
+    </ng-container>
+    
+    <ng-container matColumnDef="Fecha Nacimiento">
+      <th mat-header-cell *matHeaderCellDef class="notas"> Fecha Nac. </th>
       <td mat-cell *matCellDef="let element"> {{element.S1_S}} </td>
     </ng-container>
-
-    <ng-container matColumnDef="S1_E">
-      <th mat-header-cell *matHeaderCellDef class="notas"> S1_E </th>
-      <td mat-cell *matCellDef="let element"> {{ element.S1_E}} </td>
-    </ng-container>
-
+    
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef class="notas">Acciones</th>
         <td mat-cell *matCellDef="let element">
             <a (click)="editarAlumno(element.position)" matTooltip="Editar {{ element.nombre }}" class="pointer">
-                <mat-icon>edit</mat-icon>
+                <mat-icon style="color: #d67c65;">edit</mat-icon>
             </a>
         </td>
     </ng-container>
 
     <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No existen resultados para "{{input.value}}"</td>
-  </tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No existen resultados para "{{input.value}}"</td>
+    </tr>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
   </table>
   
