--- a/src/app/components/dashboard/nav/nav.component.html
+++ b/src/app/components/dashboard/nav/nav.component.html
@@ -1,8 +1,8 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #sidenav class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="'side'"
-      [opened]="true">
+      [mode]="'over'"
+      [opened]="false">
       <button mat-button (click)="sidenav.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         
@@ -62,6 +62,8 @@
         <mat-icon>logout</mat-icon>
       </button>
     </mat-toolbar>
+
     <router-outlet></router-outlet>
+  
   </mat-sidenav-content>
 </mat-sidenav-container>
