--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -44,7 +44,7 @@
     
     <ng-container matColumnDef="Fecha Nacimiento">
       <th mat-header-cell *matHeaderCellDef class="notas"> Fecha Nac. </th>
-      <td mat-cell *matCellDef="let element"> {{element.S1_S}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.fec_nac}} </td>
     </ng-container>
     
     <ng-container matColumnDef="acciones">
