app colegios: v0.1.2 admin - i swal

--- a/src/app/components/dashboard/nav/nav.component.html
+++ b/src/app/components/dashboard/nav/nav.component.html
@@ -54,7 +54,7 @@
         (click)="sidenav.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>App Colegios</span>
+      A<span class="text-logo">pp </span>C<span class="text-logo">olegios</span>
       <span class="example-spacer"></span>
       <button *ngFor="let men of menu" mat-button [routerLink]="men.redirect">{{ men.nombre }}</button>
       <span class="example-spacer"></span>
