--- a/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.html
+++ b/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>Crear Alumno</span>
+    <app-breadcrumbs></app-breadcrumbs>
 </mat-toolbar>
 
 <mat-card style="margin-top: 20px;">
