--- a/src/app/components/dashboard/usuarios/usuarios.component.css
+++ b/src/app/components/dashboard/usuarios/usuarios.component.css
@@ -27,3 +27,11 @@ table {
     font-size: 14px;
     width: 100%;
   }
+
+  @media (max-width:640px){
+
+    button span{
+        display: none;
+    }
+
+}
