--- a/src/app/components/dashboard/nav/nav.component.css
+++ b/src/app/components/dashboard/nav/nav.component.css
@@ -94,3 +94,11 @@ mat-divider{
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+@media (max-width:640px){
+  
+  .text-logo{
+    display: none;
+  }
+
+}
