--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
-    <span>Listado Alumnos</span>
+    <app-breadcrumbs></app-breadcrumbs>
     <div class="example-spacer"></div>
-        <button routerLink="/dashboard/nuevo" mat-raised-button color="primary"><mat-icon>person_add</mat-icon> Agregar</button>
+        <button routerLink="/dashboard/nuevo" mat-raised-button color="primary"><mat-icon>person_add</mat-icon><span>Agregar</span></button>
 </mat-toolbar>
 
 <mat-form-field>
