--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -9,7 +9,7 @@
     <input matInput (keyup)="applyFilter($event)" autocomplete="off" placeholder="busqueda..." #input>
   </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 entrada">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
