--- a/src/app/components/dashboard/inicio/inicio.component.css
+++ b/src/app/components/dashboard/inicio/inicio.component.css
@@ -22,6 +22,20 @@
   /* border: 1px solid #9b9b9b */
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  
+}
+
+/* .grid mat-grid-tile{
+  grid-column: span 2!important;
+  background: #654654;
+  position: relative;
+  top: 5px;
+  left: 5px;
+} */
+
 mat-nav-list {
   display: grid;
   gap: 1em;
@@ -65,8 +79,6 @@ mat-nav-list button:hover {
   max-width: 300px;
   min-width: 170px;
 }
-
-
 
 .dashboard-card-content > .grip-full {
   margin: auto;
