--- a/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.css
+++ b/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.css
@@ -6,3 +6,12 @@
     margin-left: 20px;
 }
 
+@media (max-width:640px){
+
+    .img-alumno{
+      width: 150px;
+      height: 150px;
+    }
+  
+  }
+  
