--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .example-spacer {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+
+.entrada {
+  animation: fadeIn 0.6s;
+  -webkit-animation: fadeIn 0.6s;
+  -moz-animation: fadeIn 0.6s;
+  -o-animation: fadeIn 0.6s;
+  -ms-animation: fadeIn 0.6s;
+  animation-name: entrada;
+}
+
+@keyframes entrada {
+  from {
+    opacity: 0;
+    transform: translateY(1%);
   }
+  to {
+    opacity: 1;
+  }
+}
