app colegios: v0.1.7 design - mode mobile

--- a/src/app/components/dashboard/alumnos/alumnos.component.html
+++ b/src/app/components/dashboard/alumnos/alumnos.component.html
@@ -1,11 +1,21 @@
 <mat-toolbar>
     <app-breadcrumbs></app-breadcrumbs>
-    <div class="example-spacer"></div>
-        <button routerLink="/dashboard/profesores/nuevo" mat-raised-button color="primary"><mat-icon>person_add</mat-icon><span>Agregar</span></button>
+    <mat-form-field class="select">
+        <mat-select [value]="selectedCurso.value">
+            <mat-option *ngFor="let curso of cursos" 
+            [value]="curso.value"
+            >
+            {{curso.viewValue}}
+        </mat-option>
+        
+    </mat-select>
+</mat-form-field>
+<div class="example-spacer"></div>
+<button routerLink="/dashboard/alumnos/nuevo" mat-raised-button color="primary"><mat-icon>person_add</mat-icon><span>Agregar</span></button>
 </mat-toolbar>
 
-<mat-form-field>
-    <mat-label>Filtros</mat-label>
+<mat-form-field class="busqueda">
+    
     <input matInput (keyup)="applyFilter($event)" autocomplete="off" placeholder="busqueda..." #input>
   </mat-form-field>
 
@@ -65,4 +75,3 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     
   </table>
-  
