--- a/src/app/components/dashboard/inicio/inicio.component.html
+++ b/src/app/components/dashboard/inicio/inicio.component.html
@@ -40,7 +40,7 @@
                     <button mat-menu-item>Observaciones</button>
                 </mat-nav-list>
                 <mat-nav-list>
-                    <button mat-menu-item routerLink="/dashboard/usuarios">Ir a Alumnos</button>
+                    <button mat-menu-item routerLink="/dashboard/alumnos">Ir a Alumnos</button>
                 </mat-nav-list>
                 <mat-nav-list class="grip-full">
                     <button mat-menu-item>Opciones y Herramientas</button>
@@ -100,7 +100,7 @@
             <mat-card-content class="dashboard-card-content">
                 <mat-nav-list>
                     <button mat-menu-item>Administrar Periodos</button>
-                    <button mat-menu-item>Administrar Profesores</button>
+                    <button mat-menu-item routerLink="/dashboard/profesores">Administrar Profesores</button>
                 </mat-nav-list>
 
                 <mat-nav-list>
