--- a/src/app/components/dashboard/calificaciones/calificaciones.component.html
+++ b/src/app/components/dashboard/calificaciones/calificaciones.component.html
@@ -1,5 +1,80 @@
 <mat-toolbar>
-    <app-breadcrumbs></app-breadcrumbs>
-    <div class="example-spacer"></div>
-    
+  <app-breadcrumbs></app-breadcrumbs>
+  <div class="example-spacer"></div>
+
 </mat-toolbar>
+
+<mat-form-field>
+  <mat-label>Filtros</mat-label>
+  <input matInput autocomplete="off" placeholder="busqueda..." #input>
+</mat-form-field>
+
+<div class="table-responsive-lg">
+  <table class="table table-borderless shadow entrada">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Apellido</th>
+        <th scope="col">Asignatura</th>
+        <th scope="col">MAT_05</th>
+        <th scope="col">LEN_05</th>
+        <th scope="col">HIS_05</th>
+        <th scope="col">ING_05</th>
+        <th scope="col">SOC_05</th>
+        <th scope="col">FIS_05</th>
+        <th scope="col">Promedio</th>
+        <th scope="col">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>David</td>
+        <td>Zamorano</td>
+        <td>Matematica</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.7</td>
+        <td>
+          <mat-icon class="ver">person</mat-icon>
+          <mat-icon class="edit">edit</mat-icon>
+        </td>
+      </tr>
+      <tr>
+        <td>Pedro</td>
+        <td>Gonzalez</td>
+        <td>Matematica</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.7</td>
+        <td>
+          <mat-icon class="ver">person</mat-icon>
+          <mat-icon class="edit">edit</mat-icon>
+        </td>
+      </tr>
+      <tr>
+        <td>Jose</td>
+        <td>Zamorano</td>
+        <td>Matematica</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>6.1</td>
+        <td>5.0</td>
+        <td>
+          <mat-icon class="ver">person</mat-icon>
+          <mat-icon class="edit">edit</mat-icon>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
