--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container entrada">
     <div class="login">
 
         <mat-progress-spinner
@@ -10,7 +10,7 @@
             [value]="value">
         </mat-progress-spinner>
 
-        <form *ngIf="!loading" [formGroup]=form (ngSubmit)="ingresar()">
+        <form class="login" *ngIf="!loading" [formGroup]=form (ngSubmit)="ingresar()">
             <img class="img-login" src="../../../assets/img/avatar.png" width="50%">
             <h1>Login</h1>
 
