--- a/src/styles.css
+++ b/src/styles.css
@@ -14,20 +14,44 @@ body {
 }
 
 .entrada {
-  animation: fadeIn 0.6s;
-  -webkit-animation: fadeIn 0.6s;
-  -moz-animation: fadeIn 0.6s;
-  -o-animation: fadeIn 0.6s;
-  -ms-animation: fadeIn 0.6s;
+  animation: fadeIn 0.5s;
+  -webkit-animation: fadeIn 0.5s;
+  -moz-animation: fadeIn 0.5s;
+  -o-animation: fadeIn 0.5s;
+  -ms-animation: fadeIn 0.5s;
   animation-name: entrada;
 }
 
 @keyframes entrada {
   from {
     opacity: 0;
-    transform: translateY(1%);
+    transform: translateY(1.4%);
   }
   to {
     opacity: 1;
   }
+}
+
+.table{
+  width: 98%;
+  margin: auto;
+  box-shadow: 0px 3px 5px 2px #b3b3b3!important;
+}
+
+.table th{
+  padding: 1.3em 1.0em 1.3em 1.9em!important;
+}
+
+.table td{
+  padding: 1em 1.0em 1em 1.9em!important;
+}
+
+.table th{
+  color: #8b8b8b;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+thead, tbody tr{
+  border-bottom: 1px solid rgb(204, 204, 204)!important;
 }
